--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "mernchatapplication": "file:..",
     "mongoose": "^8.12.1",
     "mongose": "^0.0.2-security",
     "nodemon": "^3.1.9",
@@ -14,7 +15,7 @@
   },
   "scripts": {
     "dev": "nodemon src/server.js",
-    "start": "node server.js"
+    "start": "node src/server.js"
   },
   "name": "backend",
   "version": "1.0.0",
